--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "vite",
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^12.23.9",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.4",
@@ -27,5 +31,6 @@
     "typescript": "^5.0.0",
     "vite": "^4.0.0",
     "vitest": "^3.2.4"
-  }
+  },
+  "homepage": "https://pramanhamal.github.io/card-game"
 }
