--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,20 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "Call Break Game Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "cors": "2.8.5",
+    "express": "4.18.2",
+    "socket.io": "4.7.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
