fixing coors again

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Call Break Game Server",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server/index.js"
   },
   "keywords": [],
   "author": "",
