--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,11 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "Call Break Game Server",
-  "main": "index.js",
+  "name": "callbreak-server",
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "2.8.5",
-    "express": "4.18.2",
-    "socket.io": "4.7.2"
-  },
-  "engines": {
-    "node": "18.x"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.0"
   }
 }
