--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@types/react-transition-group": "^4.4.6",
+    "express": "^5.1.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
+    "socket.io": "^4.8.1",
     "socket.io-client": "4.7.2"
   },
   "devDependencies": {
