--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-transition-group": "^4.4.6",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
