--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "framer-motion": "^10.16.4",
+    "nanoid": "^5.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
     "socket.io": "^4.8.1",
-    "socket.io-client": "4.7.2"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
